--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,47 @@
+# Core Pipeline Settings
 PIPELINE_ENABLED=true
-OPENAI_API_KEY=
-VOICE_API_KEY=
-VIDEO_API_KEY=
+NODE_ENV=production
+PORT=3000
+
+# Database (Required)
+DATABASE_URL=postgresql://user:password@localhost:5432/aurora_pipeline
+
+# Scheduler Configuration
+RUN_FREQUENCY="0 */12 * * *"
 MAX_RETRIES=3
-RUN_FREQUENCY=0 */12 * * *
-DATABASE_URL=
+
+# Text Generation (Optional - OpenAI)
+OPENAI_API_KEY=sk-your-key-here
+
+# Voice Generation (Optional - ElevenLabs)
+VOICE_API_KEY=sk_your-key-here
+
+# Video Generation (Optional - HeyGen or RunwayML)
+VIDEO_API_KEY=your-key-here
+
+# Social Media Publishing (Optional)
+TWITTER_API_KEY=your-bearer-token
+TWITTER_API_SECRET=your-secret
+YOUTUBE_API_KEY=your-key-here
+LINKEDIN_API_KEY=your-token-here
+
+# Logging
+LOG_LEVEL=info
+
+# Authentication (Optional - defaults provided for development)
+# Generate new keys: node -e "const crypto = require('crypto'); console.log(crypto.randomBytes(32).toString('hex'))"
+SESSION_SECRET=your-random-secret-key
+
+# Video Post-Processing (Optional - FFmpeg required)
+FFMPEG_ENABLED=false
+VIDEO_QUALITY=medium
+VIDEO_FORMAT=mp4
+
+# Rate Limiting (Requests per time window)
+RATE_LIMIT_API_WINDOW_MS=900000
+RATE_LIMIT_API_MAX_REQUESTS=100
+RATE_LIMIT_AUTH_WINDOW_MS=900000
+RATE_LIMIT_AUTH_MAX_REQUESTS=5
+RATE_LIMIT_PIPELINE_WINDOW_MS=3600000
+RATE_LIMIT_PIPELINE_MAX_REQUESTS=10
+
